== 0.24.5

* Enhancements
  * Sticky duration and duration_units are now included in the CSV export

== 0.24.4 (January 11, 2013)

* Enhancements
  * Gravatars are now displayed on the user index

* Refactoring
  * Added Searchable and Deletable ActiveSupport::Concerns to appropriate models

* Testing
  * Added mail_view gem for easier email templating

== 0.24.3 (January 8, 2013)

* Security Fix
  * Updated Rails to 3.2.11

== 0.24.2 (January 3, 2013)

* Enhancements
  * Updated to Contour 1.1.2
  * Removed deprecated Group Creation JSON API, Groups can now be created by specifying:
    * group[project_id]
    * group[template_id]
    * group[initial_due_date] (optional, defaults to today)
    * group[description] (optional)
    * group[board_id] (optional)
  * Sticky addition/completion emails simplified

* Bug Fix
  * Sticky popups now display the repeat_amount (1,2,3) along with the repeat_unit (day,week,month,year) for repeating stickies

== 0.24.1 (January 3, 2013)

* Security Fix
  * Updated Rails to 3.2.10

== 0.24.0 (January 2, 2013)

* Enhancements
  * Project Changes
    * Major rework of the project show page to better reflect boards and tags
      * This rework is aimed at improving the flexibility of the project page in order to discourage users from using stickies index
      * Contains three views
        * Completed: Completed sorted by due date due date descending, (today into the past)
        * Past due: Not completed sorted by due date due date descending, (today into the past)
        * Upcoming: Not completed sorted by due date ascending, (today into the future)
        * Direction of these views can be reversed, useful to see stickies with no due date assigned
      * Stickies can be dragged onto different boards
      * Stickies can be tagged by dragging stickies onto tags
  * Calendar Changes
    * Sticky editing and viewing from the calendar has changed to use an redesigned popup similar to the one used on the new project page