@@ -387,6 +387,7 @@ class StickiesController < ApplicationController
     end
 
     params[:sticky][:repeat] = ( Sticky::REPEAT.flatten.uniq.include?(params[:sticky][:repeat]) ? params[:sticky][:repeat] : 'none' ) unless params[:sticky][:repeat].blank?
+    params[:sticky][:repeat_amount] = 1 if params[:sticky][:repeat] == 'none'
 
     params[:sticky].slice(
       :description, :project_id, :owner_id, :board_id, :due_date, :completed, :duration, :duration_units, :all_day, :tag_ids, :repeat, :repeat_amount
