@@ -92,7 +92,7 @@
 <div class="control-group">
   <%= f.label :repeat, "Repeat", class: 'control-label' %>
   <div class="controls">
-    <%= f.number_field :repeat_amount, { min: 1, data: { object: 'repeat-options' }, style: "#{'display:none' if @sticky.repeat == 'none' }" } %>
+    <%= f.number_field :repeat_amount, { data: { object: 'repeat-options' }, style: "#{'display:none' if @sticky.repeat == 'none' }" } %>
     <%= f.select :repeat, Sticky::REPEAT %> <span data-object="repeat-options" style="<%= 'display:none' if @sticky.repeat == 'none' %>">After Completion</span>
   </div>
 </div>
